fix loader z-index

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -48,7 +48,7 @@ input, textarea, select { font-family: 'Inter'; }
 #menuBar { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 44px; z-index: -1; user-select: none; pointer-events: all; }
 
 #root-loader { 
-	position: fixed; width: 100%; height: 100%; left: 0px; top: 0px; background: var(--color-shape-highlight-light-solid); z-index: 1000;
+	position: fixed; width: 100%; height: 100%; left: 0px; top: 0px; background: var(--color-shape-highlight-light-solid); z-index: 10000;
 	transition: opacity 0.3s ease-in-out; 
 }
 #root-loader {
